--- a/WpfEx05/WpfEx05.csproj
+++ b/WpfEx05/WpfEx05.csproj
@@ -94,8 +94,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Img\" />
+    <Resource Include="Img\computer.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Img\laManu.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
